examples/test/testpolicy5780.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5780
  namespace: namespace375
spec:
  podSelector:
    matchLabels:
      key4: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value25
          key42: value17
      podSelector:
        matchLabels:
          key27: value20
          key3: value25
